apps/shop/currency/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-currency-dev
spec:
  host: shop-currency.shop-currency.svc.cluster.local
  subsets:
  - name: shop-currency-dev
    labels:
      app: shop-currency
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-currency-dev-d1a
    labels:
      app: shop-currency
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
